--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
     <string name="app_name">kudago</string>
-    <string name="kudago_toolbar_view">Куда сходить</string>
+    <string name="kudago_text_view">Куда сходить</string>
     <string name="moscow_city">Москва</string>
 </resources>
