--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">kudago</string>
-    <string name="kudago_text_view">Куда сходить</string>
-    <string name="moscow_city">Москва</string>
+    <string name="kudago_text_view" translatable="false">Куда сходить</string>
+    <string name="moscow_city" translatable="false">Москва</string>
+    <string name="select_city" translatable="false">Выберите город</string>
 </resources>
