--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="select_city" translatable="false">Выберите город</string>
     <string name="text_error">Ошибка загрузки данных, проверьте соединение с интернетом</string>
     <string name="text_error_bottom">Невозможно загрузить данные, проверьте соединение с интернетом</string>
+    <string name="map_api_key">AIzaSyDhzwCZ4zGofbHvJgnWQsY9j2H4RNAjFLw</string>
 </resources>
